Potential fix for color mode button not displaying on iPhone. Added -webkit-appearance: none; to color-mode_btn class.

--- a/style.css
+++ b/style.css
@@ -580,6 +580,7 @@ div#preload { display: none; }
     background: none;
     border: none;
     float: right;
+    -webkit-appearance: none;
   }
   
 .color-mode_btn svg {
